# olivera-timetracker

./: .gitignore  deploy-laura.sh  skills-lock.json
.github/workflows/: release-agent.yml
agent/: .gitignore  package-lock.json  package.json
agent/src-tauri/: Cargo.toml  tauri.conf.json
agent/src-tauri/capabilities/: default.json
agent/src-tauri/src/: buffer.rs  capture.rs  config.rs  lib.rs  uploader.rs
backend/: Makefile  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/db/: db.go  migrations.go
backend/internal/handlers/: auth.go  captures.go  clients.go  entries.go  health.go  matters.go  settings.go  users.go
backend/internal/middleware/: auth.go
backend/internal/models/: models.go
backend/internal/services/: categorizer.go  entry_generator.go  ocr.go
backend/internal/storage/: screenshots.go
backend/internal/workers/: categorizer_worker.go  cleanup_worker.go  ocr_worker.go
docs/superpowers/plans/: 2026-03-13-legal-timetracker.md  2026-03-15-pipeline-optimizations.md
docs/superpowers/specs/: 2026-03-13-legal-timetracker-design.md  2026-03-14-dashboard-redesign.md  2026-03-15-pipeline-optimizations.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: CaptureCard.tsx  Layout.tsx  MatterSelect.tsx  StatusBadge.tsx
frontend/src/hooks/: useCaptures.ts  useClients.ts  useEntries.ts  useMatters.ts  useSettings.ts
frontend/src/lib/: colors.ts
frontend/src/pages/: DashboardPage.tsx  ExportPage.tsx  MattersPage.tsx  (+3 more)
(+4 files in other folders)
