[package]
name = "agent"
version = "0.1.0"
description = "Olivera TimeTracker Capture Agent"
authors = ["Olivera"]
edition = "2021"

[lib]
name = "agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
image = "0.25"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
open = "5"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
] }
